# agentsniff

./: Dockerfile  LICENSE  README.md  agentpin_prober.py  cli.py  config.py  dns_monitor.py  docker-compose.yml  index.html  mcp_detector.py  models.py  pyproject.toml  scanner.py  server.py  tls_fingerprint.py  traffic_analyzer.py
.github/workflows/: docker.yml
agentsniff/: __init__.py  __main__.py  cli.py  config.py  models.py  notifier.py  sarif_export.py  scanner.py  server.py  storage.py
agentsniff/dashboard/: index.html
agentsniff/detectors/: __init__.py  agentpin_prober.py  base.py  dns_monitor.py  endpoint_prober.py  mcp_detector.py  port_scanner.py  tls_fingerprint.py  traffic_analyzer.py
docs/plans/: 2026-03-02-port-scanner-endpoint-prober-design.md  2026-03-02-sarif-export-design.md
tests/: test_detector_registry.py  test_endpoint_prober.py  test_false_positives.py  test_port_scanner.py  test_sarif_export.py
