[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentsniff"
version = "1.0.1"
description = "AI Agent Network Scanner - Detect AI agents on your network"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    {name = "Jascha Wanger / ThirdKey AI"},
]
keywords = ["ai", "agent", "security", "scanner", "network", "mcp", "agentpin"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Networking :: Monitoring",
]
dependencies = [
    "aiohttp>=3.9",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
]

[project.scripts]
agentsniff = "agentsniff.cli:main"

[project.urls]
Homepage = "https://agentsniff.org"
Documentation = "https://github.com/ThirdKeyAI/agentsniff#readme"
Repository = "https://github.com/ThirdKeyAI/agentsniff"
Issues = "https://github.com/ThirdKeyAI/agentsniff/issues"

[tool.setuptools.packages.find]
include = ["agentsniff*"]

[tool.setuptools.package-data]
agentsniff = ["dashboard/*.html"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
